@@ -429,7 +429,8 @@ public class WirelessTypes : global::System.IDisposable {
     region_singapore = 7,
     region_canada = 8,
     region_southAfrica = 9,
-    region_indonesia = 10
+    region_indonesia = 10,
+    region_taiwan = 11
   }
 
   public enum ChannelGroupSetting {
